# tiny-event-trace

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: event.h  event_list.h  global_event_list.h  limit.h  serialize.h  tiny_event_trace.h  trace.h
src/: event.c  event_list.c  serialize.c  trace.c
test/: CMakeLists.txt  another.c  another.h  main.c
